# krunner-qalculator

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  CMakeLists.txt  README.md  README_RU.md  install.sh  postinst  qalculatorRunner.kdev4  uninstall.sh
.github/workflows/: ci.yml
src/: CMakeLists.txt  manifest.json  qalculatorrunner.cpp  qalculatorrunner.h
tests/: CMakeLists.txt  test_qalculatorrunner.cpp
